--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="header-content">
 
             <a href="#logo" class="logo">
-                <img src="./icons8-person-24.svg" alt="logoImage" class="logo-icon"  loading="eager"/>
+                <img src="./potfolio/icons8-person-24.svg" alt="logoImage" class="logo-icon"  loading="eager"/>
                 <span class="logo-text">Myfolio</span>
             </a>
 
