--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
 
             <nav class="nav" id="nav">
-                <a href=".header" class="nav-link">About me</a>
+                <a href="#header" class="nav-link">About me</a>
                 <a href="#project" class="nav-link">Services</a>
                 <a href="#project" class="nav-link">Project</a>
                 <a href="#blog" class="nav-link">Blog</a>
