--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="project-content">
           <h3>Dhaba</h3>
           <p>A web page for a dabha  plays in a continuous .A resposive website</p>
-          <a href="./potfolio/./dhaba./CSS Project./CSS Project./RecipeWebsite/index.html">View project</a>
+          <a href="./potfolio/./dhaba/index.html">View project</a>
         </div>
       </div>
 
