--- a/potfolio/dhaba/index.html
+++ b/potfolio/dhaba/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEHTA'S RESTAURANT</title>
+    <title>DIVYANSH'S RESTAURANT</title>
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <nav>
                     <ul id="navlist">
                         <li>
-                            <p id="brand">JEENA'S RESTAURANT</p>
+                            <p id="brand">DIVYANSH'S RESTAURANT</p>
                         </li>
                         <li>
                             <div id="navitems">
@@ -127,7 +127,7 @@
 
         <footer>
             <div class="footer">
-                <p>Copyright &copy;JEENA'S RESTAURANT Pvt Ltd 2025 All Right Reserved.</p>
+                <p>Copyright &copy;DIVYANSH'S RESTAURANT Pvt Ltd 2025 All Right Reserved.</p>
                 
 
             </div>
